invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_19.src
.IPPcode24
MUL int@49 int@49 int@49